Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

Ver 6.10 (xx/xx/xx)
- changed const Face_handle& en Face_handle in /Triangulation_2.h
- added doc example and demo for Constrained_triangulation_plus_2
- added off_file_input() to read in off files
  in Triangulation_data_structure_2
- added vrml like ouput in Triangulation_data_structure_2

Ver 6.09 (1/02/02)
- still typenames in Constraint_hierarchy_2.h
  and Constrained_triangulation_plus_2.h

Ver 6.08 (31/1/02)
- a few more typenames in Constraint_hierarchy_2.h
- change include for pair to utility  and some std::

Ver 6.07 (31/1/02)
- fixed references to leda_color in demo/Delaunay.C
- fixed warning for unused variables in demoa

Ver 6.06 (31/1/02)
- fixed the clean target of test/Triangulation_2_constrained
- added missing typenames in  Constrained_triangulation_plus_2.h
  Constraint_hierarchy_2.h
- fixed the derivation from Face_handle in 
  Triangulation_line_face_circulator_2.h

Ver 6.05 (28/1/02)
- fixed makefile in test/Triangulation_2_constrained
- fixed star_hole in Constrained_triangulation_2.h
- added constraint and subcondtrained iterators in 
  Constrained_triangulation_plus_2.h

Ver 6.04 (28/1/02)
- fixed include in constructions_on_weighted_points_cartesian_2.h

Ver 6.03 (24/1/02)
- removed references to type RT in Weighted_point.h
  replaced in Regular_triangulation_euclidean_traits_2.h
  references to Point::RT by Point::R::RT
- get rid of references to type Point in 
  Triangulation_data_structure_2 and Triangulation_ds_vertex_2
- fixed missing typedefs in Triangulation_ds_iterator_2
- fixed window-input in demos demo.C and Delaunay.C
- readded files :
  Triangulation_data_structure_using_list_2.h 
  Triangulation_default_data_structure_2.h 
  for backwards compatibility

Ver 6.02 ()
- changed mirror_index() amd mirror_vertex() in Triangulation_ds_face_2